--- a/css/style.css
+++ b/css/style.css
@@ -2,7 +2,18 @@ body {
     font-family: 'Roboto', sans-serif;
 }
 
-.alert-container {}
+.alert-container .col-12 {
+    padding-left: 0;
+    padding-right: 0;
+}
+
+.site-wide-alert {
+    border-radius: 0;
+    margin-bottom: 0;
+    padding: 5px 15px;
+    background-color: #e7ac00;
+    border-color: #e7ac00;
+}
 
 .callout-container {
     height: 100vh;
@@ -26,7 +37,7 @@ body {
     left: 0;
     height: 100%;
     width: 100%;
-    background-color: rgb(0, 0, 0, 0.5);
+    background-color: rgba(0, 0, 0, 0.5);
 }
 
 .quotes-container {}
@@ -48,6 +59,41 @@ body {
 
 .block-divider--short {
     width: 35px;
+}
+
+/* Navbar */
+
+.navalert-container {
+    position: absolute;
+    top: 0;
+    left: 0;
+    padding-left: 0;
+    padding-right: 0;
+    z-index: 1;
+}
+
+.navbar {
+    margin-bottom: 0;
+    border: 0;
+    width: 100%;
+    background-color: rgba(0, 0, 0, 0.25);
+}
+
+.navbar .navbar-toggler {
+    border: 0;
+}
+
+.navbar-brand {
+    color: whitesmoke;
+    font-weight: bold;
+    font-size: 2em;
+    letter-spacing: 2px;
+    font-family: 'Mansalva', sans-serif;
+}
+
+.navbar .navbar-nav a {
+    font-weight: bold;
+    letter-spacing: 2px;
 }
 
 /* Jumbotron */
